[gd_scene load_steps=9 format=3 uid="uid://b40bxlnru21m7"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_kg4gy"]
[ext_resource type="Texture2D" uid="uid://cssn5pqo6qaid" path="res://Screenshot_2024-09-18_063205-removebg-preview.png" id="1_v0h5h"]
[ext_resource type="AudioStream" uid="uid://bnifdobm8kyek" path="res://scenes/video-game-hit-noise-001-135821.mp3" id="3_4mg0l"]
[ext_resource type="AudioStream" uid="uid://b0qvqjea47pjq" path="res://scenes/retro_laser_gun_shot-96367.mp3" id="3_p2wju"]

[sub_resource type="Gradient" id="Gradient_xp5nh"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_111bu"]
gradient = SubResource("Gradient_xp5nh")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gjgoi"]
particle_flag_disable_z = true
gravity = Vector3(0, 20, 0)
scale_min = 6.0
scale_max = 9.0
color_ramp = SubResource("GradientTexture1D_111bu")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw7da"]
size = Vector2(68, 66)

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_kg4gy")
dash_cooldown = 2.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 6
process_material = SubResource("ParticleProcessMaterial_gjgoi")
lifetime = 0.3

[node name="PlayerImage" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
position = Vector2(-9.53674e-07, -1.90735e-06)
scale = Vector2(0.226744, 0.242138)
texture = ExtResource("1_v0h5h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_iw7da")

[node name="CuberStartPos" type="Marker2D" parent="."]
position = Vector2(0, -38)

[node name="CuberTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CuberSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4mg0l")
volume_db = -5.0

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_p2wju")
volume_db = -5.0

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[connection signal="timeout" from="CuberTimer" to="." method="_on_cuber_timer_timeout"]
